@@ -1,5 +1,5 @@
 /*
- * "$Id: dest.c,v 1.33 2003/01/24 20:39:39 mike Exp $"
+ * "$Id: dest.c,v 1.34 2003/10/30 15:45:20 mike Exp $"
  *
  *   User-defined destination (and option) support for the Common UNIX
  *   Printing System (CUPS).
@@ -703,6 +703,8 @@ cups_get_sdests(ipp_op_t    op,		/* I - get-printers or get-classes */
   ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_LANGUAGE,
                "attributes-natural-language", NULL, language->language);
 
+  cupsLangFree(language);
+
   ippAddStrings(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD,
                 "requested-attributes", sizeof(pattrs) / sizeof(pattrs[0]),
 		NULL, pattrs);
@@ -794,5 +796,5 @@ cups_get_sdests(ipp_op_t    op,		/* I - get-printers or get-classes */
 
 
 /*
- * End of "$Id: dest.c,v 1.33 2003/01/24 20:39:39 mike Exp $".
+ * End of "$Id: dest.c,v 1.34 2003/10/30 15:45:20 mike Exp $".
  */
