@@ -1,8 +1,11 @@
-CHANGES.txt - 10/29/2003
+CHANGES.txt - 10/30/2003
 ------------------------
 
 CHANGES IN CUPS V1.1.20
 
+	- The CUPS API convenience functions did not call
+	  cupsLangFree() when they were done with the
+	  localization data (STR #354)
 	- The scheduler did not return the
 	  job-hold-until-supported or job-hold-until-default
 	  attributes (STR #356)
